syntax = "proto3";
package pb;
option go_package = "gim/pkg/protocol/pb";

enum MessageConversationType {
    DEFAQULT = 0;
    FRIEND = 1;//到个人
    GROUP=2;//群主
    ROOM=3;//房间
}


// 单条消息投递内容（估算大约100个字节）,todo 通知栏提醒
message Message {
  int32 code = 1; // 推送码
  bytes content = 2; // 推送内容
  int64 seq = 3; // 用户消息发送序列号
  int64 send_time = 4; // 消息发送时间戳，精确到毫秒
  MessageStatus status = 5; // 消息状态


  int64 from_user_id=6;//来自于用户id
  int64 to_user_id=7;//目标用户id

  MessageConversationType conversation_type=8;//会话类型
}

enum MessageStatus {
  MS_NORMAL = 0; // 正常的
  MS_RECALL = 1; // 撤回
}
